--- a/SecondKadaiApp/Base.lproj/Main.storyboard
+++ b/SecondKadaiApp/Base.lproj/Main.storyboard
@@ -1,24 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="名前を入力してください" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ioh-04-adE">
+                                <rect key="frame" x="68" y="144" width="279" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGj-ch-LIE">
+                                <rect key="frame" x="131" y="458" width="152" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="移動ボタン"/>
+                                <connections>
+                                    <segue destination="dBc-MC-610" kind="show" id="EH7-U5-zh2"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vok-6a-aGd">
+                                <rect key="frame" x="107" y="224" width="200" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="0ye-V6-dfH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fGj-ch-LIE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AoR-Rw-GMg"/>
+                            <constraint firstItem="fGj-ch-LIE" firstAttribute="top" secondItem="vok-6a-aGd" secondAttribute="bottom" constant="200" id="Vfs-i0-cpk"/>
+                            <constraint firstItem="vok-6a-aGd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WQO-zP-TIR"/>
+                            <constraint firstItem="Ioh-04-adE" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="g0w-KR-RAO"/>
+                            <constraint firstItem="vok-6a-aGd" firstAttribute="top" secondItem="Ioh-04-adE" secondAttribute="bottom" constant="50" id="gxw-Iq-crR"/>
+                            <constraint firstItem="Ioh-04-adE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sF3-R7-ZkO"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textInput" destination="vok-6a-aGd" id="Kf9-Go-pHa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="18.840579710144929" y="79.6875"/>
+        </scene>
+        <!--Result View Controller-->
+        <scene sceneID="UmB-Ac-uQV">
+            <objects>
+                <viewController id="dBc-MC-610" customClass="ResultViewController" customModule="SecondKadaiApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="o6H-jN-DuR">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D9G-21-OpX">
+                                <rect key="frame" x="174" y="432" width="66" height="51"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <state key="normal" title="戻る"/>
+                                <connections>
+                                    <segue destination="es6-zd-NGJ" kind="unwind" unwindAction="unwind:" id="Jdh-Nh-JdY"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eF9-GR-itt">
+                                <rect key="frame" x="175" y="300" width="64" height="33"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Nuh-Wh-ZNt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="eF9-GR-itt" firstAttribute="top" secondItem="Nuh-Wh-ZNt" secondAttribute="top" constant="300" id="IYa-WF-yhy"/>
+                            <constraint firstItem="D9G-21-OpX" firstAttribute="top" secondItem="eF9-GR-itt" secondAttribute="bottom" constant="100" id="Sqb-Zo-k1g"/>
+                            <constraint firstItem="eF9-GR-itt" firstAttribute="centerX" secondItem="o6H-jN-DuR" secondAttribute="centerX" id="iC3-vx-a9U"/>
+                            <constraint firstItem="D9G-21-OpX" firstAttribute="centerX" secondItem="eF9-GR-itt" secondAttribute="centerX" id="w8Y-9X-yAw"/>
+                            <constraint firstItem="D9G-21-OpX" firstAttribute="centerX" secondItem="o6H-jN-DuR" secondAttribute="centerX" id="xJm-is-8Ae"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="a2b-b5-SME"/>
+                    <connections>
+                        <outlet property="label" destination="eF9-GR-itt" id="JGk-0w-DUt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RIV-ro-a3O" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <exit id="es6-zd-NGJ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="815.94202898550736" y="79.6875"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
